# SocketQueuedMessageFramework

./: .gitignore  requirements.txt  setup.cfg
scripts/test/: chatroom.py  person.py  start_client.py  start_server.py
src/austin_heller_repo/: socket_kafka_message_framework.py  socket_queued_message_framework.py
src/socket_kafka_message_framework_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/socket_queued_message_framework_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: messenger_efficiency_test.py  messenger_test.py  socket_kafka_test.py  ssl_socket_test.py  structure_bind_client_messenger_test.py  structure_test.py
