[metadata]
name = socket-queued-message-framework-austinhellerrepo
version = 0.3.2
author = Austin Heller
description = A framework for transferring messages between clients and servers, then pushing/pulling those message via SequentialQueue
url = https://github.com/AustinHellerRepo/SocketQueuedMessageFramework
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  common-austinhellerrepo@git+https://github.com/AustinHellerRepo/Common
  threading-austinhellerrepo@git+https://github.com/AustinHellerRepo/Threading
  kafka-manager-austinhellerrepo@git+https://github.com/AustinHellerRepo/KafkaManager
  socket-austinhellerrepo@git+https://github.com/AustinHellerRepo/Socket

[options.packages.find]
where = src
